<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_2">btnTwo</string>
    <string name="_1">btnOne</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="clear">C</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="u00b1">±</string>
    <string name="u221a">√</string>
    <string name="PLUS">+</string>
    <string name="u00f7">÷</string>
    <string name="u00d7">×</string>
    <string name="minus">-</string>
    <string name="plus2">+</string>
    <string name="minus2">-</string>
    <string name="equals">=</string>
    <string name="percentage">%</string>
    <string name="dot">.</string>
</resources>
